<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>rviz</name>
  <version>1.12.1</version>
  <description>
     3D visualization tool for ROS.
  </description>
  <maintainer email="dgossow@gmail.com">David Gossow</maintainer>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <license>BSD</license>
  <license>Creative Commons</license>

  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author>Josh Faust</author>
  <url type="website">http://ros.org/wiki/rviz</url>
  <url type="repository">https://github.com/ros-visualization/rviz</url>
  <url type="bugtracker">https://github.com/ros-visualization/rviz/issues</url>

  <buildtool_depend>ament</buildtool_depend>

  <build_depend>assimp-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <!-- <build_depend>image_transport</build_depend> -->
  <build_depend>interactive_markers</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>ros2_console</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sensor_msgs_util</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>opengl</build_depend>

  <exec_depend>assimp</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <!-- <exec_depend>image_transport</exec_depend> -->
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>libogre-dev</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>media_export</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>ros2_console</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_util</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tinyxml</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>opengl</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
    <rosdoc config="rosdoc.yaml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
